# fast_poisson

./: .gitignore  CMakeLists.txt  notes.md
2D/: check_order.py  sample.input
2D/data/: CAVITY.txt  DEVELOPING_CHANNEL.txt  STEADY_CHANNEL.txt  TAYLOR_GREEN.txt
2D/docs/: README.md
2D/src/: CMakeLists.txt  m_boundary.f90  m_case.f90  m_parameters.f90  m_poisson_solver.f90  m_variables.f90
DCT_DCT/: CMakeLists.txt  poisson_2d.f90
DFT_method/: CMakeLists.txt  NN.input  Npower_vs_error.txt  example.input  fftw.f90  m_constants.f90
TDMA_method/: ND.input  m_constants.f90  main.f90  plot_order_test.py
application/: CMakeLists.txt  demo_2d.f90  demo_3d.f90
cmake/: downloadFindFFTW.cmake.in  fft.cmake
docs/: guide2DFT.md  stretched_grid.md
fftw3_usage/: CMakeLists.txt  test_1d_guru.f90  test_1d_guru_x.txt  test_1d_guru_y.txt  test_1d_r2c.f90  test_1d_r2r.f90  test_1d_r2r_norm.f90  test_3d_r2c.f90
more_TDMA/cavity/: linear_solver.py  poisson_nn.py
old_version/2D/: CMakeLists.txt
old_version/2D/examples/: cavity.input  developing_channel.input  steady_channel.input  taylor_green.input
old_version/2D/src/: m_RHS.f90  m_constants.f90  m_fft.f90  m_grid.f90  m_tdma.f90  m_utils.f90  main.f90
old_version/DCT_DCT/: m_numerics.f90  main.f90  scratch.ipynb
old_version/DFT_method/: PP.input  README.md  m_poisson_solver.f90  main.f90  makefile  order_test.py
old_version/TDMA_method/: CMakeLists.txt  Npower_vs_error.txt  m_poisson_solver.f90  m_tdma.f90  order_test.py
old_version/more_TDMA/cavity/: compare_scheme.ipynb
python/: DFT.ipynb  check_linear_solver.ipynb  derivative.py  fuck.ipynb  generate_demo_2d.py  generate_demo_3d.py  helpers.py  poisson.py  solver_2d.py  solver_3d.py  solver_NN.ipynb  solver_PP.ipynb  stretched_grid.ipynb  test_1d_r2r.txt  test_2d.py  test_3d.py  test_m_fft_2d.py  test_m_fft_3d.py  test_m_laplacian.py  test_m_metrics.py  test_m_rectilinear.py  test_m_rectilinear_3d.py  tools.py
python/DFT/: DFT.ipynb  helpers.py
python/TDMA/: helpers.py  solver_NN.ipynb
python/generate_test_data/: test_m_grids.py
src/: CMakeLists.txt  m_connectors.f90  m_constants.f90  m_fft.f90  m_fftw3.f90  m_gradients.f90  m_grid.f90  m_grids.f90  m_io.f90  m_kinds.f90  m_laplacian.f90  m_metrics.f90  m_numerics.f90  m_poisson.f90  m_poisson_2d.f90  m_rectilinear.f90  m_tdma.f90  test_1d.f90  test_2d.f90
testings/: CMakeLists.txt  test_m_connectors.f90  test_m_fft_2d.f90  test_m_fft_3d.f90  test_m_grids.f90  test_m_laplacian.f90  test_m_metrics.f90  test_m_rectilinear_2d.f90  test_m_rectilinear_3d.f90
